# thiruppugazh

./: Contributors.md  README.md
thiruppugazh-api/: .gitignore  README.md  app.py  package-lock.json  pyproject.toml  requirements.txt
thiruppugazh-ui/: .gitignore  tailwind.config.js
thiruppugazh-ui/app/: page.tsx
thiruppugazh-ui/app/components/: Header.tsx  HeroBanner.tsx
