[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thiruppugazh-api"
version = "0.1.0"
description = "A modern REST API built with Python for the Thiruppugazh project"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "flasgger>=0.9.7.1",
    "flask>=2.0.0",
    "flask-cors>=3.0.10",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
prod = [
    "gunicorn>=20.1.0",
]

[tool.setuptools]
packages = ["app"]
